[gd_scene load_steps=2 format=2]

[ext_resource path="res://email_tutorial.gd" type="Script" id=1]

[node name="Email_Window" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = 2.0

[node name="HBoxContainer" type="HBoxContainer" parent="Content"]
margin_right = 1024.0

[node name="ScrollContainer" type="ScrollContainer" parent="Content"]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Content/ScrollContainer"]
margin_right = 85.0
margin_bottom = 44.0

[node name="email1" type="Button" parent="Content/ScrollContainer/VBoxContainer"]
margin_right = 85.0
margin_bottom = 20.0
text = "Real Email"

[node name="email2" type="Button" parent="Content/ScrollContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 85.0
margin_bottom = 44.0
text = "Scam Email"

[node name="RealPopup" type="PopupPanel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -421.5
margin_top = -276.0
margin_right = 421.5
margin_bottom = 276.0

[node name="ColorRect" type="ColorRect" parent="RealPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Panel" type="ColorRect" parent="RealPopup/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="email_elements" type="RichTextLabel" parent="RealPopup/ColorRect/Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 836.0
margin_bottom = 497.0
bbcode_enabled = true
bbcode_text = "[color=black]
Real
__________________________________________________________________________________________________________________________________________

From: [color=blue][u]real@real.com[/u][/color]

Subject: your package is on the way!
__________________________________________________________________________________________________________________________________________


Dear Valued Customer,

This is a real email[/color]"
text = "
Real
__________________________________________________________________________________________________________________________________________

From: real@real.com

Subject: your package is on the way!
__________________________________________________________________________________________________________________________________________


Dear Valued Customer,

This is a real email"

[node name="HBoxContainer" type="HBoxContainer" parent="RealPopup/ColorRect/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.5
margin_top = -40.0
margin_right = 68.5

[node name="RealButton" type="Button" parent="RealPopup/ColorRect/Panel/HBoxContainer"]
margin_right = 78.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Real Email"

[node name="DetectButton" type="Button" parent="RealPopup/ColorRect/Panel/HBoxContainer"]
margin_left = 82.0
margin_right = 137.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Detect"

[node name="Exit" type="Button" parent="RealPopup/ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 16.0
text = "X"

[node name="Tutorial3" type="WindowDialog" parent="RealPopup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -130.0
margin_right = 203.0
margin_bottom = 130.0
window_title = "Tutorial 4/12"

[node name="Label" type="Label" parent="RealPopup/Tutorial3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -68.0
margin_right = 130.5
margin_bottom = 68.0
text = "This is where you can read the email you
have opened. You need to read through
the email, looking at each detail to
determine whether it is real or a scam.

This email is real, so you would need
to click \"Real Email\" at the bottom to
proceed"

[node name="FakePopup" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -421.5
margin_top = -276.0
margin_right = 421.5
margin_bottom = 276.0

[node name="ColorRect" type="ColorRect" parent="FakePopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Panel" type="ColorRect" parent="FakePopup/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="email_elements" type="RichTextLabel" parent="FakePopup/ColorRect/Panel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 836.0
margin_bottom = 497.0
bbcode_enabled = true
bbcode_text = "[color=black]
Fake Email
__________________________________________________________________________________________________________________________________________

From: [color=blue][u]this.is.a.fake.address@fake.con[/u][/color]

Subject: Fake Email Scam!
__________________________________________________________________________________________________________________________________________


Hello,

Please click this [color=blue][u]fake link[/u][/color]

Thank you,
Scammer[/color]
"
text = "
Fake Email
__________________________________________________________________________________________________________________________________________

From: this.is.a.fake.address@fake.con

Subject: Fake Email Scam!
__________________________________________________________________________________________________________________________________________


Hello,

Please click this fake link

Thank you,
Scammer
"

[node name="HBoxContainer" type="HBoxContainer" parent="FakePopup/ColorRect/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -68.5
margin_top = -40.0
margin_right = 68.5

[node name="RealButton" type="Button" parent="FakePopup/ColorRect/Panel/HBoxContainer"]
margin_right = 78.0
margin_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Real Email"

[node name="DetectButton2" type="Button" parent="FakePopup/ColorRect/Panel/HBoxContainer"]
margin_left = 82.0
margin_right = 137.0
margin_bottom = 40.0
size_flags_horizontal = 0
text = "Detect"

[node name="Exit" type="Button" parent="FakePopup/ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 16.0
text = "X"

[node name="Tutorial4" type="WindowDialog" parent="FakePopup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.0
margin_top = -139.0
margin_right = 186.0
margin_bottom = 139.0
window_title = "Tutorial 6/12"

[node name="Label" type="Label" parent="FakePopup/Tutorial4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.5
margin_top = -68.0
margin_right = 130.5
margin_bottom = 68.0
text = "Now here we would carefully read
this email. We can see that there
are some suspicious elements.

So this email is a scam, lets click
\"Detect\" at the bottom to identify
the scam clues."

[connection signal="pressed" from="Content/ScrollContainer/VBoxContainer/email1" to="." method="_on_email1_pressed"]
[connection signal="pressed" from="Content/ScrollContainer/VBoxContainer/email2" to="." method="_on_email2_pressed"]
[connection signal="pressed" from="RealPopup/ColorRect/Panel/HBoxContainer/RealButton" to="." method="_on_RealButton_pressed"]
[connection signal="pressed" from="RealPopup/ColorRect/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="FakePopup/ColorRect/Panel/HBoxContainer/DetectButton2" to="." method="_on_DetectButton2_pressed"]
[connection signal="pressed" from="FakePopup/ColorRect/Exit" to="." method="_on_Exit_pressed"]
